# ddo

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.txt  README.md  tarpaulin.sh
.github/workflows/: build.yml  main.yml  qa.yml  tests.yml
ddo/: Cargo.toml  tarpaulin.sh
ddo-viz/: Cargo.toml
ddo-viz/examples/bounded_kp/: main.rs  model.rs
ddo-viz/examples/unbounded_knapsack/: main.rs
ddo-viz/src/: common.rs  lib.rs  visualisation.rs  viz_mdd.rs
ddo/examples/alp/: dominance.rs  io_utils.rs  main.rs  model.rs  tests.rs
ddo/examples/golomb/: main.rs  tests.rs
ddo/examples/jssp/: main.rs  model.rs  relax.rs  state.rs
ddo/examples/knapsack/: heugre.rs  main.rs  tests.rs
ddo/examples/lcs/: dominance.rs  dp.rs  io_utils.rs  main.rs  model.rs  tests.rs
ddo/examples/max2sat/: data.rs  errors.rs  heuristics.rs  instance.rs  main.rs  model.rs  relax.rs  tests.rs
ddo/examples/mcp/: graph.rs  main.rs  model.rs  relax.rs  tests.rs
ddo/examples/misp/: heugre.rs  main.rs  tests.rs
ddo/examples/psp/: io_utils.rs  main.rs  model.rs  tests.rs  ub_utils.rs
ddo/examples/sop/: heuristics.rs  io_utils.rs  main.rs  model.rs  relax.rs  state.rs  tests.rs
ddo/examples/srflp/: heuristics.rs  io_utils.rs  main.rs  model.rs  relax.rs  state.rs  tests.rs
ddo/examples/talentsched/: io_utils.rs  main.rs  model.rs  tests.rs
ddo/examples/tests/resources/knapsack/: example1
ddo/examples/tests/resources/max2sat/: frb10-6-4.wcnf  frb20-11-3.wcnf
ddo/examples/tests/resources/mcp/: mcp_n30_p0.1_006.mcp
ddo/examples/tests/resources/minla/matrix_market/: bcspwr03.mtx  bcspwr04.mtx  can___62.mtx  dwt__221.mtx  ibm32.mtx  pde225.mtx
ddo/examples/tests/resources/minla/nugent/: GraphNug-n-16-t6.gra  GraphNug-n-18-t6.gra  GraphNug-n-26-t5.gra
ddo/examples/tests/resources/misp/: brock200_3.clq  c-fat200-2.clq  c-fat200-5.clq  c-fat500-10.clq  c-fat500-2.clq  p_hat1500-3.clq  p_hat700-1.clq
ddo/examples/tests/resources/psp/instancesWith10items/: 102  110  113  115  118  119  121  129  136  139  144  146  151  153  157  165  181  183  184  185  191  192  20  208  225  226  23  231  254  259  265  272  283  286  290  295  306  31  312  32  (+108 more)
ddo/examples/tests/resources/psp/instancesWith2items/: 12
ddo/examples/tests/resources/psp/instancesWith5items/: 1  105  119  133  144  145  150  162  173  174  177  178  180  181  185  191  20  205  211  217  220  222  223  225  229  24  241  245  26  271  274  276  280  29  294  296  299  304  308  31  (+85 more)
ddo/examples/tsptw/: dominance.rs  heuristics.rs  instance.rs  main.rs  model.rs  relax.rs  state.rs  tests.rs
ddo/examples/visualisation/: main.rs
ddo/src/: common.rs  lib.rs
ddo/src/abstraction/: barrier.rs  cache.rs  dominance.rs  dp.rs  fringe.rs  frontier.rs  heuristics.rs  mdd.rs  mod.rs  solver.rs
ddo/src/implementation/: mod.rs
ddo/src/implementation/barrier/: empty.rs  mod.rs  simple.rs
ddo/src/implementation/cache/: empty.rs  simple.rs
ddo/src/implementation/dominance/: empty.rs  mod.rs  simple.rs
ddo/src/implementation/fringe/: mod.rs  no_duplicate.rs  simple.rs
ddo/src/implementation/frontier/: no_duplicate.rs  simple.rs
ddo/src/implementation/heuristics/: cutoff.rs  mod.rs  subproblem_ranking.rs  utils.rs  width.rs
ddo/src/implementation/mdd/: clean.rs  long_arcs.rs  mod.rs  node_flags.rs  pooled.rs  vector_based.rs
ddo/src/implementation/solver/: mod.rs  parallel.rs  sequential.rs
ddo/src/tf_utils/: mod.rs  model_helper.rs
examples/: mod.rs
examples/binary_minla/: graph.rs  main.rs  model.rs  relax.rs
examples/knapsack/: heuristics.rs  main.rs  mod.rs  model.rs  relax.rs
examples/max2sat/: heuristics.rs  instance.rs  main.rs  model.rs  relax.rs
examples/mcp/: graph.rs  main.rs  model.rs  relax.rs
examples/minimalistic/: main.rs
examples/minla/: graph.rs  main.rs  model.rs  relax.rs
examples/misp/: heuristics.rs  instance.rs  main.rs  mdd.rs  model.rs  relax.rs
examples/psp/: idee2.rs  main.rs  model.rs  parsing.rs
models/jssp/: pyproject.toml
models/jssp/jssp/: __init__.py  test.py
models/jssp/jssp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/jssp/jssp/src/: __init__.py  infer.py
models/jssp/jssp/src/rl/Envs/: JobShopGymEnv.py  JobShopMultiGymEnv.py
models/jssp/jssp/src/rl/Models/: RolloutBeam.py  RolloutPOMO.py  RolloutSampling.py  Set2Set_test.py  StateLSTM.py  actorcritic.py
py_ddo/: Cargo.toml  README.md
py_ddo/src/: lib.rs
resources/alp/: airland10.txt  airland11.txt  airland12.txt  airland13.txt  airland9.txt  alp_n100_r1_c2_std10_s0  alp_n100_r1_c2_std10_s1  alp_n100_r1_c2_std10_s2  alp_n100_r1_c2_std10_s3  alp_n100_r1_c2_std10_s4  alp_n100_r1_c2_std20_s0  alp_n100_r1_c2_std20_s1  alp_n100_r1_c2_std20_s2  alp_n100_r1_c2_std20_s3  alp_n100_r1_c2_std20_s4  alp_n100_r1_c2_std30_s0  alp_n100_r1_c2_std30_s1  alp_n100_r1_c2_std30_s2  alp_n100_r1_c2_std30_s3  alp_n100_r1_c2_std30_s4  alp_n100_r1_c3_std10_s0  alp_n100_r1_c3_std10_s1  alp_n100_r1_c3_std10_s2  alp_n100_r1_c3_std10_s3  alp_n100_r1_c3_std10_s4  alp_n100_r1_c3_std20_s0  alp_n100_r1_c3_std20_s1  alp_n100_r1_c3_std20_s2  alp_n100_r1_c3_std20_s3  alp_n100_r1_c3_std20_s4  alp_n100_r1_c3_std30_s0  alp_n100_r1_c3_std30_s1  alp_n100_r1_c3_std30_s2  alp_n100_r1_c3_std30_s3  alp_n100_r1_c3_std30_s4  alp_n100_r1_c4_std10_s0  alp_n100_r1_c4_std10_s1  alp_n100_r1_c4_std10_s2  alp_n100_r1_c4_std10_s3  alp_n100_r1_c4_std10_s4  (+685 more)
resources/jssp/: README.md  atest.txt
resources/knapsack/: README.md  f10_l-d_kp_20_879  f3_l-d_kp_4_20  f4_l-d_kp_4_11  f6_l-d_kp_10_60  f7_l-d_kp_7_50  f8_l-d_kp_23_10000  f9_l-d_kp_5_80  knapPI_1_10000_1000_1  knapPI_1_1000_1000_1  knapPI_1_2000_1000_1  knapPI_1_200_1000_1  knapPI_1_5000_1000_1  knapPI_1_500_1000_1  knapPI_2_10000_1000_1  knapPI_2_1000_1000_1  knapPI_2_100_1000_1  knapPI_2_2000_1000_1  knapPI_2_200_1000_1  knapPI_2_5000_1000_1  knapPI_2_500_1000_1  (+7 more)
seminar/: Dockerfile  README.md  ddo_seminar.ipynb
src/: common.rs  lib.rs  main.rs  prelude.rs  test_utils.rs
tests/: test_max2sat.rs  test_misp.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+2213 files in other folders)
