[package]
name             = "ddo"
version          = "0.3.11"
authors          = ["Xavier Gillard <xavier.gillard@uclouvain.be>"]
edition          = "2018"
description      = "DDO a generic and efficient framework for MDD-based optimization."
repository       = "https://github.com/xgillard/ddo"
readme           = "README.md"
license          = "MIT"
keywords         = ["optimization", "solver", "decision-diagrams", "combinatorial", "cp"]
categories       = ["science", "mathematics", "algorithms", "concurrency"]
exclude          = ["examples/tests/resources/*" ]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compare          = "0.1.0"
bitset-fixed     = "0.1.0"
binary-heap-plus = "0.4.0"

# -- going parallel --------
num_cpus         = "1.13.0"
parking_lot      = "0.11.1"
crossbeam        = "0.8.0"

[dev-dependencies]
peak_alloc       = "0.1.0"
mock-it          = "0.3.0"
regex            = "1.4.2"
structopt        = "0.3.21"

[profile.release]
incremental      = true
lto              = true
panic            = 'abort'