[package]
name             = "ddo-viz"
version          = "1.0.0"
authors          = ["Xavier Gillard <xavier.gillard@uclouvain.be>"]
edition          = "2021"
description      = "Visualization tools for DDO (a generic and efficient framework for MDD-based optimization)."
repository       = "https://github.com/xgillard/ddo"
readme           = "../README.md"
license          = "MIT"
keywords         = ["optimization", "solver", "decision-diagrams", "combinatorial", "cp"]
categories       = ["science", "mathematics", "algorithms", "concurrency"]
exclude          = ["examples/tests/resources/*" ]

[dependencies]
ddo              = {path = "../ddo" }
fxhash           = "0.2"
derive_builder   = "0.12"

[dev-dependencies]
clap             = {version = "4.0", features = ["derive"]}
anyhow           = "1.0"
thiserror        = "1.0"