[package]
name             = "ddo"
version          = "1.0.0"
authors          = ["Xavier Gillard <xavier.gillard@uclouvain.be>"]
edition          = "2021"
description      = "DDO a generic and efficient framework for MDD-based optimization."
repository       = "https://github.com/xgillard/ddo"
readme           = "../README.md"
license          = "MIT"
keywords         = ["optimization", "solver", "decision-diagrams", "combinatorial", "cp"]
categories       = ["science", "mathematics", "algorithms", "concurrency"]
exclude          = ["examples/tests/resources/*" ]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash       = "1.1.0"
binary-heap-plus = "0.5.0"

# -- going parallel --------
num_cpus         = "1.13.0"
parking_lot      = "0.12.1"
compare          = "0.1.0"

[dev-dependencies]
thiserror        = "1.0"
regex            = "1.6"
clap             = {version = "4.0", features = ["derive"]}
bit-vec          = "0.6"
bit-set          = "0.5"
smallbitset      = "0.5"