[package]
name             = "ddo"
version          = "2.0.0"
authors          = ["Xavier Gillard <xavier.gillard@uclouvain.be>"]
edition          = "2021"
description      = "DDO a generic and efficient framework for MDD-based optimization."
repository       = "https://github.com/xgillard/ddo"
readme           = "../README.md"
license          = "MIT"
keywords         = ["optimization", "solver", "decision-diagrams", "combinatorial", "cp"]
categories       = ["science", "mathematics", "algorithms", "concurrency"]
exclude          = ["examples/tests/resources/*" ]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash           = "0.2"
binary-heap-plus = "0.5"
dashmap          = "5.4"
derive_builder   = "0.12"

# -- going parallel --------
num_cpus         = "1.15"
parking_lot      = "0.12"
compare          = "0.1"

[dev-dependencies]
thiserror        = "1.0"
regex            = "1.8"
clap             = {version = "4.2", features = ["derive"]}
bit-vec          = "0.6"
bit-set          = "0.5"
smallbitset      = "0.7.1"
ordered-float    = "3.6.0"
