[package]
name             = "xtask"
version          = "1.0.0"
authors          = ["Xavier Gillard <xavier.gillard@uclouvain.be>"]
edition          = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap     = {version = "4.0", features = ["derive"]}
anyhow   = "1.0"
xtaskops = "0.3"
