[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jssp"
authors = [
    {name = "Example Author", email = "author@example.com"}
]

description = "package description"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "numpy==1.20.3",
    "matplotlib==3.5.1",
    "torch==1.10.2",
    "torchvision==0.11.3",
    "gym==0.21.0",
    "numba==0.54.1"
]
